k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: appName
  namespace: namespace
spec:
  selector:
    app: appname
  type: ClusterIP
  ports:
  - name: portname
    protocol: TCP
    port: portnumber
    targetPort: portnumber
